--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -125,6 +125,7 @@
     "setNewPassword": "Establecer nueva contraseña",
     "newPassword": "Nueva contraseña",
     "pendingSignups": "Registros pendientes",
-    "resend": "Reenviar"
+    "resend": "Reenviar",
+    "resetEmailFailed": "No se pudo enviar el correo electrónico de restablecimiento de contraseña"
   }
   
