--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -127,6 +127,7 @@
     "setNewPassword": "Đặt mật khẩu mới",
     "newPassword": "Mật khẩu mới",
     "pendingSignups": "Đăng ký chờ xác nhận",
-    "resend": "Gửi lại"
+    "resend": "Gửi lại",
+    "resetEmailFailed": "Không thể gửi email đặt lại mật khẩu"
   }
   
