--- a/app/i18n/zh/common.json
+++ b/app/i18n/zh/common.json
@@ -127,5 +127,6 @@
   "setNewPassword": "设置新密码",
   "newPassword": "新密码",
   "pendingSignups": "待验证注册",
-  "resend": "重发"
+  "resend": "重发",
+  "resetEmailFailed": "发送重置密码邮件失败"
 }
