feat: add new localization strings for map app selection and club management

--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -117,6 +117,8 @@
     "searchUsers": "Search users",
     "signupTitle": "Sign Up",
     "signupWithGoogle": "Sign Up With Google",
-    "alreadyHaveAccount": "Already have an account? Login"
+    "alreadyHaveAccount": "Already have an account? Login",
+    "chooseMapApp": "Choose Map App",
+    "leaveClub": "Leave Club"
   }
   
