--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -116,6 +116,8 @@
     "cancel": "Cancelar",
     "searchUsers": "Buscar usuarios",
     "signupTitle": "Registrarse",
-    "signupWithGoogle": "Regístrate con Google"
+    "signupWithGoogle": "Regístrate con Google",
+    "chooseMapApp": "Elige la aplicación de mapas",
+    "leaveClub": "¿Salir del club?"
   }
   
