--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -116,6 +116,8 @@
     "cancel": "Hủy bỏ",
     "searchUsers": "Tìm kiếm người dùng",
     "signupTitle": "Đăng ký",
-    "signupWithGoogle": "Đăng ký bằng Google"
+    "signupWithGoogle": "Đăng ký bằng Google",
+    "chooseMapApp": "Chọn ứng dụng bản đồ",
+    "leaveClub": "Rời khỏi câu lạc bộ"
   }
   
