PAIMO-46 feat(email templates): add localization support for confirmation and password reset emails (#14)
* feat(templates): move email templates to utils

* feat(templates): email i18n

* feat(templates): email templates localization

* password reset template

* route settings

* upsert lang to user schema

* fix resend email lang

* feat(templates): move email templates to utils

* feat(templates): email i18n

* feat(templates): email templates localization

* password reset template

* route settings

* upsert lang to user schema

* fix resend email lang

* fix: center align welcome title in unauthenticated state

* fix email templates path issue

* templates path

* templates path

* feat(templates): move email templates to utils

* feat(templates): email i18n

* feat(templates): email templates localization

* password reset template

* route settings

* upsert lang to user schema

* fix resend email lang

* feat(templates): move email templates to utils

* feat(templates): email i18n

* feat(templates): email templates localization

* route settings

* fix email templates path issue

* fix: center align welcome title in unauthenticated state

* templates path

* templates path

* migrate HTML templates to TypeScript modules

* add locale

* feat(templates): move email templates to utils

* feat(templates): email i18n

* feat(templates): email templates localization

* password reset template

* route settings

* upsert lang to user schema

* fix resend email lang

* feat(templates): move email templates to utils

* feat(templates): email i18n

* feat(templates): email templates localization

* route settings

* fix email templates path issue

* fix: center align welcome title in unauthenticated state

* templates path

* templates path

* feat(templates): move email templates to utils

* feat(templates): email i18n

* feat(templates): email templates localization

* upsert lang to user schema

* feat(templates): move email templates to utils

* feat(templates

--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -117,6 +117,18 @@
     "searchUsers": "Tìm kiếm người dùng",
     "signupTitle": "Đăng ký",
     "signupWithGoogle": "Đăng ký bằng Google",
+    "forgotPassword": "Quên mật khẩu?",
+    "sendResetEmail": "Gửi email đặt lại mật khẩu",
+    "passwordResetEmailSent": "Email đặt lại mật khẩu đã được gửi",
+    "failedToSendResetEmail": "Không thể gửi email đặt lại mật khẩu",
+    "resetPassword": "Đặt lại mật khẩu",
+    "signupSent": "Đăng ký đã gửi",
+    "confirmPasswordPlaceholder": "Xác nhận mật khẩu",
+    "setNewPassword": "Đặt mật khẩu mới",
+    "newPassword": "Mật khẩu mới",
+    "pendingSignups": "Đăng ký chờ xác nhận",
+    "resend": "Gửi lại",
+    "resetEmailFailed": "Không thể gửi email đặt lại mật khẩu",
     "chooseMapApp": "Chọn ứng dụng bản đồ",
     "leaveClub": "Rời khỏi câu lạc bộ"
   }
