--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -117,6 +117,18 @@
     "searchUsers": "Buscar usuarios",
     "signupTitle": "Registrarse",
     "signupWithGoogle": "Regístrate con Google",
+    "forgotPassword": "¿Olvidaste tu contraseña?",
+    "sendResetEmail": "Enviar correo electrónico de restablecimiento de contraseña",
+    "passwordResetEmailSent": "Correo electrónico de restablecimiento de contraseña enviado",
+    "failedToSendResetEmail": "No se pudo enviar el correo electrónico de restablecimiento de contraseña",
+    "resetPassword": "Restablecer contraseña",
+    "signupSent": "Registro enviado",
+    "confirmPasswordPlaceholder": "Confirmar contraseña",
+    "setNewPassword": "Establecer nueva contraseña",
+    "newPassword": "Nueva contraseña",
+    "pendingSignups": "Registros pendientes",
+    "resend": "Reenviar",
+    "resetEmailFailed": "No se pudo enviar el correo electrónico de restablecimiento de contraseña",
     "chooseMapApp": "Elige la aplicación de mapas",
     "leaveClub": "¿Salir del club?"
   }
