--- a/app/i18n/zh/common.json
+++ b/app/i18n/zh/common.json
@@ -117,6 +117,7 @@
   "searchUsers": "搜索用户",
   "signupTitle": "注册",
   "signupWithGoogle": "使用 Google 注册",
+  "alreadyHaveAccount": "已有账号？登录",
   "forgotPassword": "忘记密码？",
   "sendResetEmail": "发送重置密码邮件",
   "passwordResetEmailSent": "密码重置邮件已发送",
@@ -134,5 +135,19 @@
   "freeStyle": "自由打",
   "randomMatching": "多人转",
   "eventPlayDate": "活动日期",
-  "gymInfo": "球馆信息"
+  "gymInfo": "球馆信息",
+  "clubNameRequired": "俱乐部名称是必填项",
+  "clubCreated": "俱乐部创建成功！",
+  "failedToCreateClub": "创建俱乐部失败",
+  "creating": "创建中...",
+  "clubName": "俱乐部名称",
+  "clubLocation": "位置",
+  "clubDescription": "描述",
+  "clubVisibility": "可见性",
+  "noClubsAvailable": "暂无可用俱乐部",
+  "create": "创建",
+  "male": "男",
+  "female": "女",
+  "genderStats": "男：{{maleCount}}, 女：{{femaleCount}}",
+  "eventsCount": "活动数：{{count}}"
 }
