--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -130,6 +130,10 @@
     "resend": "Gửi lại",
     "resetEmailFailed": "Không thể gửi email đặt lại mật khẩu",
     "chooseMapApp": "Chọn ứng dụng bản đồ",
-    "leaveClub": "Rời khỏi câu lạc bộ"
+    "leaveClub": "Rời khỏi câu lạc bộ",
+    "freeStyle": "Tự do",
+    "randomMatching": "Ghép đôi ngẫu nhiên",
+    "eventPlayDate": "Ngày chơi sự kiện",
+    "gymInfo": "Thông tin phòng tập"
   }
   
