adding free style

--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -135,6 +135,33 @@
   "freeStyle": "Free Style",
   "randomMatching": "Random Matching",
   "eventPlayDate": "Event Play Date",
-  "gymInfo": "Gym Information"
+  "gymInfo": "Gym Information",
+  "quickMatches": "Quick Matches",
+  "createMatch": "Create Match",
+  "creating": "Creating...",
+  "noQuickMatches": "No quick matches available. Create one to get started!",
+  "match": "Match",
+  "waiting": "Waiting",
+  "playing": "Playing",
+  "completed": "Completed",
+  "players": "Players",
+  "emptySlot": "Empty Slot",
+  "result": "Result",
+  "joinMatch": "Join Match",
+  "leaveMatch": "Leave Match",
+  "startMatch": "Start Match",
+  "enterScore": "Enter Score",
+  "rematch": "Rematch",
+  "saving": "Saving...",
+  "save": "Save",
+  "participants": "Participants",
+  "matches": "Matches",
+  "wins": "Wins",
+  "losses": "Losses",
+  "winRate": "Win Rate",
+  "totalScore": "Total Score",
+  "scoreMargin": "Score Margin",
+  "avgScore": "Avg Score",
+  "noMatchesPlayed": "No matches played"
 }
   
