--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -134,6 +134,7 @@
     "freeStyle": "Tự do",
     "randomMatching": "Ghép đôi ngẫu nhiên",
     "eventPlayDate": "Ngày chơi sự kiện",
-    "gymInfo": "Thông tin phòng tập"
+    "gymInfo": "Thông tin phòng tập",
+    "emailRequired": "Yêu cầu email"
   }
   
