--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -134,6 +134,7 @@
     "freeStyle": "Estilo libre",
     "randomMatching": "Emparejamiento aleatorio",
     "eventPlayDate": "Fecha de juego del evento",
-    "gymInfo": "Información del gimnasio"
+    "gymInfo": "Información del gimnasio",
+    "emailRequired": "Se requiere correo electrónico"
   }
   
