PAIMO-19 feat: enabling everyone to create club and adding club details (#24)

--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -36,6 +36,7 @@
   "googleLoginSuggestion": "We recommend using Google login. You can change your password later in your profile.",
   "signupLink": "Sign Up",
   "userTitle": "My Clubs",
+  "noClubs": "You are not a member of any clubs.",
   "host": "Host: {{club}}",
   "status": "Status: {{status}}",
   "registerBy": "Register by: {{time}}",
@@ -94,7 +95,6 @@
   "admin": "Admin",
   "member": "Member",
   "clubDirectory": "Club Directory",
-  "noClubs": "You are not a member of any clubs.",
   "myClubs": "My Clubs",
   "clubsDirectory": "Clubs Directory",
   "createdBy": "Created by: {{createdBy}}",
@@ -136,11 +136,23 @@
   "randomMatching": "Random Matching",
   "eventPlayDate": "Event Play Date",
   "gymInfo": "Gym Information",
+  "clubNameRequired": "Club name is required",
+  "clubCreated": "Club created successfully!",
+  "failedToCreateClub": "Failed to create club",
+  "creating": "Creating...",
+  "clubName": "Club Name",
+  "clubLocation": "Location",
+  "clubDescription": "Description",
+  "clubVisibility": "Visibility",
+  "noClubsAvailable": "No clubs available",
+  "create": "Create",
+  "male": "Male",
+  "female": "Female",
+  "genderStats": "Male: {{maleCount}}, Female: {{femaleCount}}",
+  "eventsCount": "Events: {{count}}",
   "quickMatches": "Quick Matches",
   "createMatch": "Create Match",
-  "creating": "Creating...",
   "noQuickMatches": "No quick matches available. Create one to get started!",
-  "match": "Match",
   "waiting": "Waiting",
   "playing": "Playing",
   "completed": "Completed",
@@ -153,8 +165,6 @@
   "enterScore": "Enter Score",
   "rematch": "Rematch",
   "saving": "Saving...",
-  "save": "Save",
-  "participants": "Participants",
   "matches": "Matches",
   "wins": "Wins",
   "losses": "Losses",
