update quick match lobby

--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -163,7 +163,9 @@
   "leaveMatch": "Leave Match",
   "startMatch": "Start Match",
   "enterScore": "Enter Score",
+  "completeMatch": "Complete Match",
   "rematch": "Rematch",
+  "swapRematch": "Swap & Rematch",
   "saving": "Saving...",
   "matches": "Matches",
   "wins": "Wins",
