PAIMO-43 feat(haptic btn): Add haptic feedback to button interactions (#25)
* feat(haptic button): install motion

* locales

* elements styling

* feat(haptic button): button ui changed

* btn style

* fix button

* loading dots for button

* install motion

* haptic feedback

--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -136,6 +136,7 @@
     "randomMatching": "Ghép đôi ngẫu nhiên",
     "eventPlayDate": "Ngày chơi sự kiện",
     "gymInfo": "Thông tin phòng tập",
+    "emailRequired": "Yêu cầu email",
     "clubNameRequired": "Tên câu lạc bộ là bắt buộc",
     "clubCreated": "Tạo câu lạc bộ thành công!",
     "failedToCreateClub": "Tạo câu lạc bộ thất bại",
