--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -174,6 +174,7 @@
   "totalScore": "Total Score",
   "scoreMargin": "Score Margin",
   "avgScore": "Avg Score",
-  "noMatchesPlayed": "No matches played"
+  "noMatchesPlayed": "No matches played",
+  "emailRequired": "Email is required"
 }
   
