--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -136,6 +136,7 @@
     "randomMatching": "Emparejamiento aleatorio",
     "eventPlayDate": "Fecha de juego del evento",
     "gymInfo": "Información del gimnasio",
+    "emailRequired": "Se requiere correo electrónico",
     "clubNameRequired": "El nombre del club es obligatorio",
     "clubCreated": "Club creado exitosamente!",
     "failedToCreateClub": "Error al crear el club",
