feat(pullToRefresh): pull to refresh wrapper

--- a/app/i18n/en/home.json
+++ b/app/i18n/en/home.json
@@ -7,5 +7,6 @@
   "availableEvents": "Available Events",
   "noEvents": "No events.",
   "hi": "Hi, {{name}}",
-  "defaultName": "there"
+  "defaultName": "there",
+  "loading": "Loading..."
 }
