--- a/app/i18n/es/home.json
+++ b/app/i18n/es/home.json
@@ -7,5 +7,6 @@
   "availableEvents": "Eventos disponibles",
   "noEvents": "No hay eventos.",
   "hi": "Hola, {{name}}",
-  "defaultName": "Amigos"
+  "defaultName": "Amigos",
+  "loading": "Cargando..."
 }
