--- a/app/i18n/vi/home.json
+++ b/app/i18n/vi/home.json
@@ -7,5 +7,6 @@
   "availableEvents": "Sự kiện có sẵn",
   "noEvents": "Không có sự kiện nào.",
   "hi": "Chào, {{name}}",
-  "defaultName": "Bạn bè"
+  "defaultName": "Bạn bè",
+  "loading": "Đang tải..."
 }
