Add placement quiz on signup

--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -28,6 +28,19 @@
   "missingEmail": "Email is required.",
   "invalidOrExpiredToken": "Invalid or expired token.",
   "saveProfile": "Save Profile",
+  "placementTitle": "Placement Questions",
+  "placementExperience": "How long have you been playing badminton?",
+  "placementExperience.lessThanYear": "Less than 1 year",
+  "placementExperience.oneToThree": "1-3 years",
+  "placementExperience.moreThanThree": "More than 3 years",
+  "placementFrequency": "How often do you play each week?",
+  "placementFrequency.rarely": "Once a week or less",
+  "placementFrequency.sometimes": "2-3 times a week",
+  "placementFrequency.often": "4 or more times a week",
+  "placementJumpSmash": "Can you perform a jump smash?",
+  "placementJumpSmash.yes": "Yes",
+  "placementJumpSmash.no": "No",
+  "placementSubmit": "Submit",
   "loadFailed": "Failed to load.",
   "loginTitle": "Login",
   "invalidCredentials": "Invalid credentials",
