--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -28,6 +28,19 @@
     "wechatPlaceholder": "ID de WeChat",
     "genderRequired": "Se requiere el género",
     "saveProfile": "Guardar perfil",
+    "placementTitle": "Preguntas de nivel",
+    "placementExperience": "¿Cuánto tiempo llevas jugando bádminton?",
+    "placementExperience.lessThanYear": "Menos de 1 año",
+    "placementExperience.oneToThree": "1-3 años",
+    "placementExperience.moreThanThree": "Más de 3 años",
+    "placementFrequency": "¿Con qué frecuencia juegas cada semana?",
+    "placementFrequency.rarely": "Una vez por semana o menos",
+    "placementFrequency.sometimes": "2-3 veces por semana",
+    "placementFrequency.often": "4 o más veces por semana",
+    "placementJumpSmash": "¿Puedes hacer un salto y rematar?",
+    "placementJumpSmash.yes": "Sí",
+    "placementJumpSmash.no": "No",
+    "placementSubmit": "Enviar",
     "loadFailed": "Error al cargar.",
     "loginTitle": "Iniciar sesión",
     "invalidCredentials": "Credenciales inválidas",
