--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -28,6 +28,19 @@
     "wechatPlaceholder": "ID WeChat",
     "genderRequired": "Vui lòng chọn giới tính",
     "saveProfile": "Lưu hồ sơ",
+    "placementTitle": "Câu hỏi đánh giá trình độ",
+    "placementExperience": "Bạn chơi cầu lông bao lâu rồi?",
+    "placementExperience.lessThanYear": "Dưới 1 năm",
+    "placementExperience.oneToThree": "1-3 năm",
+    "placementExperience.moreThanThree": "Hơn 3 năm",
+    "placementFrequency": "Bạn chơi mỗi tuần bao nhiêu lần?",
+    "placementFrequency.rarely": "Một lần/tuần hoặc ít hơn",
+    "placementFrequency.sometimes": "2-3 lần/tuần",
+    "placementFrequency.often": "4 lần/tuần trở lên",
+    "placementJumpSmash": "Bạn có thể nhảy đập không?",
+    "placementJumpSmash.yes": "Có",
+    "placementJumpSmash.no": "Không",
+    "placementSubmit": "Gửi",
     "loadFailed": "Tải thất bại.",
     "loginTitle": "Đăng nhập",
     "invalidCredentials": "Sai thông tin đăng nhập",
