--- a/app/i18n/zh/common.json
+++ b/app/i18n/zh/common.json
@@ -28,6 +28,19 @@
   "missingEmail": "需要提供邮箱。",
   "invalidOrExpiredToken": "链接无效或已过期。",
   "saveProfile": "保存资料",
+  "placementTitle": "水平评估问卷",
+  "placementExperience": "你打羽毛球多久了？",
+  "placementExperience.lessThanYear": "少于1年",
+  "placementExperience.oneToThree": "1-3年",
+  "placementExperience.moreThanThree": "超过3年",
+  "placementFrequency": "你每周打球频率如何？",
+  "placementFrequency.rarely": "每周一次或更少",
+  "placementFrequency.sometimes": "每周2-3次",
+  "placementFrequency.often": "每周4次或以上",
+  "placementJumpSmash": "你会跳杀吗？",
+  "placementJumpSmash.yes": "会",
+  "placementJumpSmash.no": "不会",
+  "placementSubmit": "提交",
   "loadFailed": "加载失败。",
   "loginTitle": "登录",
   "invalidCredentials": "账号或密码错误",
