Add admin placement question management

--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -41,6 +41,12 @@
   "placementJumpSmash.yes": "Yes",
   "placementJumpSmash.no": "No",
   "placementSubmit": "Submit",
+  "placementManagement": "Manage Placement Questions",
+  "addQuestion": "Add Question",
+  "questionText": "Question",
+  "optionText": "Option",
+  "optionScore": "Score",
+  "addOption": "Add Option",
   "loadFailed": "Failed to load.",
   "loginTitle": "Login",
   "invalidCredentials": "Invalid credentials",
