--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -41,6 +41,12 @@
     "placementJumpSmash.yes": "Sí",
     "placementJumpSmash.no": "No",
     "placementSubmit": "Enviar",
+    "placementManagement": "Gestionar preguntas de nivel",
+    "addQuestion": "Agregar pregunta",
+    "questionText": "Pregunta",
+    "optionText": "Opción",
+    "optionScore": "Puntuación",
+    "addOption": "Agregar opción",
     "loadFailed": "Error al cargar.",
     "loginTitle": "Iniciar sesión",
     "invalidCredentials": "Credenciales inválidas",
