--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -41,6 +41,12 @@
     "placementJumpSmash.yes": "Có",
     "placementJumpSmash.no": "Không",
     "placementSubmit": "Gửi",
+    "placementManagement": "Quản lý câu hỏi đánh giá",
+    "addQuestion": "Thêm câu hỏi",
+    "questionText": "Câu hỏi",
+    "optionText": "Tùy chọn",
+    "optionScore": "Điểm",
+    "addOption": "Thêm tùy chọn",
     "loadFailed": "Tải thất bại.",
     "loginTitle": "Đăng nhập",
     "invalidCredentials": "Sai thông tin đăng nhập",
