--- a/app/i18n/zh/common.json
+++ b/app/i18n/zh/common.json
@@ -41,6 +41,12 @@
   "placementJumpSmash.yes": "会",
   "placementJumpSmash.no": "不会",
   "placementSubmit": "提交",
+  "placementManagement": "管理评估问题",
+  "addQuestion": "新增问题",
+  "questionText": "问题",
+  "optionText": "选项",
+  "optionScore": "分数",
+  "addOption": "新增选项",
   "loadFailed": "加载失败。",
   "loginTitle": "登录",
   "invalidCredentials": "账号或密码错误",
