Add placement parts with weights

--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -47,6 +47,12 @@
   "optionText": "Option",
   "optionScore": "Score",
   "addOption": "Add Option",
+  "addPart": "Add Part",
+  "partName": "Part Name",
+  "partWeight": "Part Weight",
+  "partMultiplier": "Part Multiplier",
+  "partA": "Part A",
+  "partB": "Part B",
   "loadFailed": "Failed to load.",
   "loginTitle": "Login",
   "invalidCredentials": "Invalid credentials",
