--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -47,6 +47,12 @@
     "optionText": "Opción",
     "optionScore": "Puntuación",
     "addOption": "Agregar opción",
+    "addPart": "Agregar sección",
+    "partName": "Nombre de la sección",
+    "partWeight": "Peso de sección",
+    "partMultiplier": "Multiplicador de sección",
+    "partA": "Sección A",
+    "partB": "Sección B",
     "loadFailed": "Error al cargar.",
     "loginTitle": "Iniciar sesión",
     "invalidCredentials": "Credenciales inválidas",
