--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -47,6 +47,12 @@
     "optionText": "Tùy chọn",
     "optionScore": "Điểm",
     "addOption": "Thêm tùy chọn",
+    "addPart": "Thêm phần",
+    "partName": "Tên phần",
+    "partWeight": "Trọng số phần",
+    "partMultiplier": "Hệ số phần",
+    "partA": "Phần A",
+    "partB": "Phần B",
     "loadFailed": "Tải thất bại.",
     "loginTitle": "Đăng nhập",
     "invalidCredentials": "Sai thông tin đăng nhập",
