--- a/app/i18n/zh/common.json
+++ b/app/i18n/zh/common.json
@@ -47,6 +47,12 @@
   "optionText": "选项",
   "optionScore": "分数",
   "addOption": "新增选项",
+  "addPart": "新增部分",
+  "partName": "部分名称",
+  "partWeight": "部分权重",
+  "partMultiplier": "部分倍数",
+  "partA": "A 部分",
+  "partB": "B 部分",
   "loadFailed": "加载失败。",
   "loginTitle": "登录",
   "invalidCredentials": "账号或密码错误",
