Add placement level management

--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -48,6 +48,12 @@
   "optionScore": "Score",
   "addOption": "Add Option",
   "addPart": "Add Part",
+  "placementLevels": "Placement Levels",
+  "levelCode": "Code",
+  "levelName": "Name",
+  "levelMin": "Min Score",
+  "levelMax": "Max Score",
+  "addLevel": "Add Level",
   "partName": "Part Name",
   "partWeight": "Part Weight",
   "partMultiplier": "Part Multiplier",
