--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -48,6 +48,12 @@
     "optionScore": "Puntuación",
     "addOption": "Agregar opción",
     "addPart": "Agregar sección",
+    "placementLevels": "Niveles de puntaje",
+    "levelCode": "Código",
+    "levelName": "Nombre",
+    "levelMin": "Puntuación mínima",
+    "levelMax": "Puntuación máxima",
+    "addLevel": "Agregar nivel",
     "partName": "Nombre de la sección",
     "partWeight": "Peso de sección",
     "partMultiplier": "Multiplicador de sección",
