--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -48,6 +48,12 @@
     "optionScore": "Điểm",
     "addOption": "Thêm tùy chọn",
     "addPart": "Thêm phần",
+    "placementLevels": "Các mức điểm",
+    "levelCode": "Mã",
+    "levelName": "Tên",
+    "levelMin": "Điểm tối thiểu",
+    "levelMax": "Điểm tối đa",
+    "addLevel": "Thêm mức",
     "partName": "Tên phần",
     "partWeight": "Trọng số phần",
     "partMultiplier": "Hệ số phần",
