--- a/app/i18n/zh/common.json
+++ b/app/i18n/zh/common.json
@@ -48,6 +48,12 @@
   "optionScore": "分数",
   "addOption": "新增选项",
   "addPart": "新增部分",
+  "placementLevels": "评分等级",
+  "levelCode": "代号",
+  "levelName": "名称",
+  "levelMin": "最小分",
+  "levelMax": "最大分",
+  "addLevel": "新增等级",
   "partName": "部分名称",
   "partWeight": "部分权重",
   "partMultiplier": "部分倍数",
