Add labels and placement reset

--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -162,6 +162,7 @@
   "newPassword": "New Password",
   "pendingSignups": "Pending Signups",
   "resend": "Resend",
+  "resetPlacement": "Reset Placement",
   "resetEmailFailed": "Failed to send reset email",
   "freeStyle": "Free Style",
   "randomMatching": "Random Matching",
