--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -160,6 +160,7 @@
     "newPassword": "Nueva contraseña",
     "pendingSignups": "Registros pendientes",
     "resend": "Reenviar",
+    "resetPlacement": "Restablecer cuestionario",
     "resetEmailFailed": "No se pudo enviar el correo electrónico de restablecimiento de contraseña",
     "chooseMapApp": "Elige la aplicación de mapas",
     "leaveClub": "¿Salir del club?",
