--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -160,6 +160,7 @@
     "newPassword": "Mật khẩu mới",
     "pendingSignups": "Đăng ký chờ xác nhận",
     "resend": "Gửi lại",
+    "resetPlacement": "Đặt lại câu hỏi đánh giá",
     "resetEmailFailed": "Không thể gửi email đặt lại mật khẩu",
     "chooseMapApp": "Chọn ứng dụng bản đồ",
     "leaveClub": "Rời khỏi câu lạc bộ",
