--- a/app/i18n/zh/common.json
+++ b/app/i18n/zh/common.json
@@ -160,6 +160,7 @@
   "newPassword": "新密码",
   "pendingSignups": "待验证注册",
   "resend": "重发",
+  "resetPlacement": "重新填写问卷",
   "resetEmailFailed": "发送重置密码邮件失败",
   "chooseMapApp": "选择地图应用",
   "leaveClub": "退出俱乐部",
