--- a/app/i18n/zh/profile.json
+++ b/app/i18n/zh/profile.json
@@ -28,5 +28,7 @@
   "passwordResetEmailSent": "密码重置邮件已发送",
   "failedToSendResetEmail": "发送密码重置邮件失败",
   "nicknameUpdated": "昵称已更新",
-  "failedToUpdateNickname": "昵称更新失败"
+  "failedToUpdateNickname": "昵称更新失败",
+  "placementLevelCode": "级别代码",
+  "placementLevelName": "级别名称"
 }
