Show placement score in user table and improve mobile layout

--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -214,8 +214,9 @@
   "bypassPlacement": "Bypass Placement",
   "undoBypass": "Undo Bypass",
   "notCompleted": "Not Completed",
+  "placementScore": "Placement Score",
   "yes": "Yes",
   "no": "No",
   "actions": "Actions"
- }
+}
   
