--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -204,8 +204,9 @@
   "bypassPlacement": "Bỏ qua đánh giá",
   "undoBypass": "Hủy bỏ qua",
   "notCompleted": "Chưa hoàn thành",
+  "placementScore": "Điểm đánh giá",
   "yes": "Có",
   "no": "Không",
   "actions": "Hành động"
- }
+}
   
