Add placement management link

--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -6,6 +6,7 @@
   "nav.myClubs": "My Clubs",
   "nav.eventEdit": "Event Edit",
   "nav.manage": "Manage",
+  "nav.placementManagement": "Placement Management",
   "nav.logout": "Logout",
   "title": "Sign Up",
   "emailPlaceholder": "Email",
