--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -6,6 +6,7 @@
     "nav.myClubs": "Mis Clubes",
     "nav.eventEdit": "Editar Evento",
     "nav.manage": "Administrar",
+    "nav.placementManagement": "Gestión de placement",
     "nav.logout": "Cerrar sesión",
     "title": "Registrarse",
     "emailPlaceholder": "Correo electrónico",
