--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -6,6 +6,7 @@
     "nav.myClubs": "Câu lạc bộ của tôi",
     "nav.eventEdit": "Chỉnh sửa sự kiện",
     "nav.manage": "Quản lý",
+    "nav.placementManagement": "Quản lý đánh giá",
     "nav.logout": "Đăng xuất",
     "title": "Đăng ký",
     "emailPlaceholder": "Email",
