--- a/app/i18n/zh/common.json
+++ b/app/i18n/zh/common.json
@@ -6,6 +6,7 @@
   "nav.myClubs": "我的俱乐部",
   "nav.eventEdit": "活动编辑",
   "nav.manage": "管理后台",
+  "nav.placementManagement": "评分管理",
   "nav.logout": "登出",
   "title": "注册",
   "emailPlaceholder": "邮箱",
