feat: add search bar to clubs directory

--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -115,6 +115,7 @@
   "confirm": "Confirm",
   "cancel": "Cancel",
   "searchUsers": "Search users",
+  "searchClubs": "Search clubs",
   "signupTitle": "Sign Up",
   "signupWithGoogle": "Sign Up With Google",
   "alreadyHaveAccount": "Already have an account? Login",
