--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -115,6 +115,7 @@
     "confirm": "Xác nhận",
     "cancel": "Hủy bỏ",
     "searchUsers": "Tìm kiếm người dùng",
+    "searchClubs": "Tìm kiếm câu lạc bộ",
     "signupTitle": "Đăng ký",
     "signupWithGoogle": "Đăng ký bằng Google",
     "alreadyHaveAccount": "Đã có tài khoản? Đăng nhập",
