--- a/app/i18n/zh/common.json
+++ b/app/i18n/zh/common.json
@@ -115,6 +115,7 @@
   "confirm": "确认",
   "cancel": "取消",
   "searchUsers": "搜索用户",
+  "searchClubs": "搜索俱乐部",
   "signupTitle": "注册",
   "signupWithGoogle": "使用 Google 注册",
   "alreadyHaveAccount": "已有账号？登录",
