--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -115,6 +115,7 @@
     "confirm": "Confirmar",
     "cancel": "Cancelar",
     "searchUsers": "Buscar usuarios",
+    "searchClubs": "Buscar clubes",
     "signupTitle": "Registrarse",
     "signupWithGoogle": "Regístrate con Google",
     "alreadyHaveAccount": "¿Ya tienes una cuenta? Inicia sesión",
