Add events search bar

--- a/app/i18n/en/home.json
+++ b/app/i18n/en/home.json
@@ -8,5 +8,6 @@
   "noEvents": "No events.",
   "hi": "Hi, {{name}}",
   "defaultName": "there",
-  "loading": "Loading..."
+  "loading": "Loading...",
+  "searchEvents": "Search events"
 }
