--- a/app/i18n/es/home.json
+++ b/app/i18n/es/home.json
@@ -8,5 +8,6 @@
   "noEvents": "No hay eventos.",
   "hi": "Hola, {{name}}",
   "defaultName": "Amigos",
-  "loading": "Cargando..."
+  "loading": "Cargando...",
+  "searchEvents": "Buscar eventos"
 }
