--- a/app/i18n/vi/home.json
+++ b/app/i18n/vi/home.json
@@ -8,5 +8,6 @@
   "noEvents": "Không có sự kiện nào.",
   "hi": "Chào, {{name}}",
   "defaultName": "Bạn bè",
-  "loading": "Đang tải..."
+  "loading": "Đang tải...",
+  "searchEvents": "Tìm kiếm sự kiện"
 }
