--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -93,6 +93,8 @@
     "createClub": "Crear club",
     "superAdmin": "Super administrador",
     "admin": "Administrador",
+    "president": "Presidente",
+    "vicePresident": "Vicepresidente",
     "member": "Miembro",
     "clubDirectory": "Directorio de clubes",
     "myClubs": "Mis Clubes",
