--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -93,6 +93,8 @@
     "createClub": "Tạo câu lạc bộ",
     "superAdmin": "Quản trị viên",
     "admin": "Quản trị viên",
+    "president": "Chủ tịch",
+    "vicePresident": "Phó chủ tịch",
     "member": "Thành viên",
     "clubDirectory": "Thư mục câu lạc bộ",
     "myClubs": "Câu lạc bộ của tôi",
