PAIMO-65 Implement club roles with management UI (#35)

--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -93,7 +93,10 @@
     "createClub": "Crear club",
     "superAdmin": "Super administrador",
     "admin": "Administrador",
+    "president": "Presidente",
+    "vicePresident": "Vicepresidente",
     "member": "Miembro",
+    "manageRoles": "Administrar roles",
     "clubDirectory": "Directorio de clubes",
     "myClubs": "Mis Clubes",
     "clubsDirectory": "Directorio de clubes",
