--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -93,7 +93,10 @@
   "createClub": "Create Club",
   "superAdmin": "Super Admin",
   "admin": "Admin",
+  "president": "President",
+  "vicePresident": "Vice President",
   "member": "Member",
+  "manageRoles": "Manage Roles",
   "clubDirectory": "Club Directory",
   "myClubs": "My Clubs",
   "clubsDirectory": "Clubs Directory",
