--- a/app/i18n/zh/common.json
+++ b/app/i18n/zh/common.json
@@ -93,7 +93,10 @@
   "createClub": "创建俱乐部",
   "superAdmin": "超级管理员",
   "admin": "管理员",
+  "president": "会长",
+  "vicePresident": "副会长",
   "member": "成员",
+  "manageRoles": "管理角色",
   "clubDirectory": "俱乐部目录",
   "myClubs": "我的俱乐部",
   "clubsDirectory": "俱乐部目录",
